# vcard-qr-generator

./: .dockerignore  AUTHENTICATION.md  BIN.md  CLAUDE.md  Cargo.toml  DATABASE.md  DEPLOYMENT.md  Dockerfile  MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml
migrations/: 001_create_vcards_table.sql  002_create_migrations_table.sql  002_create_users_table.sql
src/: auth.rs  main.rs
static/: admin.html  index.html  login.html  profile.html
