[package]
name = "vcard-qr-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.14", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = "0.14"
image = "0.25"
base64 = "0.22"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
uuid = { version = "1.11", features = ["v4", "serde"] }
